--- a/conf/app.conf
+++ b/conf/app.conf
@@ -2,5 +2,14 @@ appname = cmsByBeego
 httpport = 8080
 runmode = dev
 
-
+copyrequestbody = true
 sessionon=true
+
+#mysql
+db_alias = "default"
+db_name = "xcms"
+db_user = "root"
+db_pwd = "hzc778209"
+db_host = "localhost"
+db_port = 3306
+db_charset = "utf8"
